<resources>
    <string name="app_name">Material Components</string>
    <string name="app_exit">Press again to exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">

    </string>

    <string name="step_of">Step %1$d of %2$d</string>
    <string name="section_format">Section : %1$d</string>

    <string name="about_text">The best android implementation of material UI components. This app implemented based on
        Google Design Guidelines.
    </string>
    <string name="UrlHere">Tulis url di sini</string>
    <string name="Kembali">Kembali</string>
    <string name="Lanjutkan">Lanjutkan</string>
    <string name="proses">Proses</string>
    <string name="Biru">Biru</string>
    <string name="Merah">Merah</string>
    <string name="Kuning">Kuning</string>
    <string name="HarapTunggu">Harap tunggu sebentar!</string>
    <string name="Hijau">Hijau</string>
    <string name="myVisibilityProgressBar">Visibility Progress Bar</string>
    <string name="SplashScreen">Splash Screen</string>
    <string name="GoogleProgressBar">Google Progress Bar</string>
    <string name="DarkGoogleProgressBar">Dark Google Progress Bar</string>
    <string name="HorizontalProgressBar">Horizontal Progress Bar</string>
    <string name="CircleProgressBar">Circle Progress Bar</string>
    <string name="CustomColorProgressBar">Custom Color Progress Bar</string>
    <string name="CustomDrawalabeProgressBar">Custom Drawalable Progress Bar</string>
    <string name="myAsyncTask">AsyncTask with Progress Bar</string>
    <string name="myStyleProgressBar">Style Progress Bar</string>
    <string name="myDialogProgressBar">Dialog Progress Bar</string>
    <string name="myWebViewProgressBar">Web View with Progress Bar</string>
    <string name="myIndeterminateProgressBar">Indeterminate Progress Bar</string>
    <string name="menu_1">Master</string>
    <string name="menu_2">TextView</string>
    <string name="menu_3">EditText</string>
    <string name="menu_4">CardView</string>
    <string name="menu_5">Button</string>
    <string name="menu_6">Project ImageView</string>
    <string name="menu_7">ProgressBar</string>
    <string name="menu_8">BottomSheetDialogFragment</string>
    <string name="menu_9">BottomNavigationBar</string>
    <string name="menu_10">Toast</string>
    <string name="menu_11">Toolbar</string>
    <string name="menu_12">CheckBox</string>
    <string name="menu_13">RecyclerView</string>
    <string name="menu_14">Menu</string>
    <string name="menu_15">TabLayout</string>
    <string name="menu_16">DrawerLayout</string>
    <string name="menu_17">FAB</string>
    
    <string name="menu_13_basic">Basic</string>
    <string name="Checkbox">Checkbox</string>
    <string name="animal">animal</string>
    <string name="Select_All">Select All</string>

    <string name="checkbox_0">CheckBox Color</string>
    <string name="checkbox_1">CheckBox1</string>
    <string name="checkbox_2">CheckBox2</string>
    <string name="checkbox_3">CheckBox3</string>
    <string name="checkbox_4">CheckBox4</string>
    <string name="change_color">Change Color</string>
    <string name="checkbox_red">Red</string>
    <string name="checkbox_green">Green</string>
    <string name="checkbox_blue">Blue</string>
    <string name="checkbox_change_color">Change Color</string>
    <string name="checkbox_check_all_uncheck_all">Check All / Uncheck All</string>

    <string name="nav_home">Home</string>
    <string name="nav_back">Back</string>
    <string name="nav_account">Account</string>
    <string name="nav_menuicon">MENU</string>

    <string name="menu11_1">Menu 1</string>
    <string name="menu11_2">Menu 2</string>
    <string name="menu11_3">Menu 3</string>
    <string name="menu11_4">Menu 4</string>
    <string name="menu11_5">Menu 5</string>
    <string name="menu11_name">Toolbar Menu</string>

    <string name="appname">ToolbarSearchview</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--keperluan kelompok 16-->
    <string name="nav_header_title">Team16</string>
    <string name="nav_header_subtitle">Hafid Hakim | Yohanes Mac M</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profile</string>

</resources>
