<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu1"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/menu11_1" />
    <item
            android:id="@+id/menu2"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu11_2" />
    <item
            android:id="@+id/menu3"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu11_3" />
    <item
            android:id="@+id/menu4"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu11_4" />
    <item
            android:id="@+id/menu5"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/menu11_5" />
</menu>