<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
                android:background="@color/blue_500"
                android:text="@string/Biru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonBiru"
                android:layout_weight="1"/>
        <RadioButton
                android:background="@color/green_500"
                android:text="@string/Hijau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonHijau"
                android:layout_weight="1"/>
        <RadioButton
                android:background="@color/red_500"
                android:text="@string/Merah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMerah"
                android:layout_weight="1"/>
        <RadioButton
                android:background="@color/yellow_500"
                android:text="@string/Kuning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonKuning"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/proses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myButtonProcess"/>
    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProgressBar"
            tools:visibility="visible"
            android:max="100"
            android:progress="0"
    />
</LinearLayout>