<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
                android:text="@string/GoogleProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonGoogle"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/DarkGoogleProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonDarkGoole"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/proses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myButtonOk"/>
    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProgresBarDraw" style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/googleg_standard_color_18"/>
    <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myProgresBarDraw2" style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/googleg_disabled_color_18"/>
</LinearLayout>